--- a/index.html
+++ b/index.html
@@ -1,4 +1,41 @@
-<!-- P O S T -->
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Escola ">
+
+
+    <link rel="stylesheet" href="style.css">
+
+
+    <title>Escola</title>
+
+</head>
+
+
+<body>
+
+
+    <!-- H E A D E R -->
+
+
+    <header>
+        <h1>site teste teste</h1>
+    </header>
+
+
+    <!-- M A I N -->
+
+
+    <main>
+
+   <!-- P O S T -->
 
     <div class="card">
 
@@ -86,12 +123,7 @@ Nós vamos tentar arrumar as portas e os vasos dos banheiros.
 <p class="conteudo">
 
 	<!--Alunos:Existem ações planejadas contra a violência?
-Grêmio: Nós vamos tentar trazer o conforto e a diversão que eles [alunos] merecem para não ter essa insegurança.
-
-
-
-
- -->
+Grêmio: Nós vamos tentar trazer o conforto e a diversão que eles [alunos] merecem para não ter essa insegurança.-->
 	
 </p>
 
