--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
 		<p class="conteudo">
 	
-			<!--No começo deste ano, a escola promoveu a eleição da chapa de grêmio estudantil. A chapa vencedora foi a “Liberdade Estudantil”, composta em sua maioria por alunas do 7° ano da escola. Em entrevista, os alunos da recuperação paralela realizaram perguntas e tiraram dúvidas frequentes sobre a atuação da chapa e sua função na escola.--> </p>
+			No começo deste ano, a escola promoveu a eleição da chapa de grêmio estudantil. A chapa vencedora foi a “Liberdade Estudantil”, composta em sua maioria por alunas do 7° ano da escola. 
+			Em entrevista, os alunos da recuperação paralela realizaram perguntas e tiraram dúvidas frequentes sobre a atuação da chapa e sua função na escola. </p>
 
 
 <p class="conteudo">
