--- a/index.html
+++ b/index.html
@@ -66,32 +66,32 @@ Em entrevista, os alunos da recuperação paralela realizaram perguntas e tirara
 
 
 <p class="conteudo">
-Alunos: Explique o que é uma chapa de grêmio
+Alunos: Explique o que é uma chapa de grêmio <br>
 Grêmio: É tipo uma segunda diretoria que ajuda nos problemas dos alunos. É uma liderança mais próxima dos alunos.
 </p>
 
 <p class="conteudo">
 
-Alunos: Vocês vão melhorar as escolas?
+Alunos: Vocês vão melhorar as escolas? <br>
 Grêmio: Sim, vamos fazer o melhor pela escola. A gente vai fazer o possível pelo desempenho deles [alunos].
 </p>
 
 <p class="conteudo">
 
-Alunos: Vocês vão pedir ar-condicionado?
+Alunos: Vocês vão pedir ar-condicionado? <br>
 Grêmio: Já compraram ar-condicionado. Mas não instalaram por causa da fiação elétrica.
 </p>
 
 <p class="conteudo">
 
-Alunos: Haverá festa junina?
+Alunos: Haverá festa junina? <br>
 Grêmio: Sim. A gente vai tentar fazer uma festa junina para eles [alunos], porque o Christian [diretor] disse que vai ter um sábado letivo de festa em junho. 
 A gente vai tentar adicionar mais coisas legais para eles: dança, música, coreografias e barraquinhas.
 </p>
 
 <p class="conteudo">
 
-Alunos:O que o grêmio vai fazer pela escola?
+Alunos:O que o grêmio vai fazer pela escola? <br>
 Grêmio: Nós queremos a limpeza das quadras para os alunos, retirar as pedras e folhas. Isso para ninguém se machucar.
 O grêmio não é só para ajudar na limpeza. Vamos trazer diversão: música e dança na hora do recreio, gincana, abrir a biblioteca no intervalo, festas e cultura.
 Nós vamos tentar arrumar as portas e os vasos dos banheiros.
@@ -99,13 +99,13 @@ Nós vamos tentar arrumar as portas e os vasos dos banheiros.
 
 <p class="conteudo">
 
-Alunos:Existem ações planejadas contra a violência?
+Alunos:Existem ações planejadas contra a violência? <br>
 Grêmio: Nós vamos tentar trazer o conforto e a diversão que eles [alunos] merecem para não ter essa insegurança.
 </p>
 
 <p class="conteudo">
 
-Alunos:A chapa se elege por quanto tempo?
+Alunos:A chapa se elege por quanto tempo? <br>
 Grêmio: Por dois anos
 </p>
 
