--- a/index.html
+++ b/index.html
@@ -116,3 +116,33 @@ Grêmio: Por dois anos
     </div>
 
     <!-- P O S T -->
+ <div class="card">
+
+        <!-- I M A G E M -->
+
+        <img src="img/bebedouro.jpg">
+
+        <!-- I M A G E M -->
+
+
+
+        <!-- T E X T O -->
+
+        <div class="texto">
+
+            <!-- T I T U L O -->
+
+            <p class="titulo"> BEBEDOUROS NOVOS SÃO INSTALADOS NA ESCOLA </p>
+
+            <!-- T I T U L O -->
+            
+		<!-- P A R A G R A F O -->
+
+		<p class="conteudo">
+	
+Dois novos bebedouros chegaram na EMEF Virgílio Salata. Eles servem para os alunos beberem água filtrada, natural ou gelada.</p>
+		<p class="conteudo">
+O equipamento às vezes vaza um pouco de água. Uma vez foi porque o ralo estava entupido com lixo. Outro motivo é porque a cuba é pequena. 
+Mas, para conter a água, os funcionários da limpeza colocaram panos embaixo do reservatório. </p>
+		<p class="conteudo">
+Alguns alunos estão usando as mãos ou o copo para beberem água. Outros preferem usar a garrafa para beber. Todos gostaram da novidade.</p>
