--- a/index.html
+++ b/index.html
@@ -146,3 +146,55 @@ O equipamento às vezes vaza um pouco de água. Uma vez foi porque o ralo estava
 Mas, para conter a água, os funcionários da limpeza colocaram panos embaixo do reservatório. </p>
 		<p class="conteudo">
 Alguns alunos estão usando as mãos ou o copo para beberem água. Outros preferem usar a garrafa para beber. Todos gostaram da novidade.</p>
+		
+		<!-- P A R A G R A F O -->
+
+        </div>
+
+    </div>
+
+    <!-- P O S T -->
+ <div class="card">
+
+        <!-- I M A G E M -->
+
+        <img src="img/patos.jpg">
+
+        <!-- I M A G E M -->
+
+
+
+        <!-- T E X T O -->
+
+        <div class="texto">
+
+            <!-- T I T U L O -->
+
+            <p class="titulo"> OS PATINHOS NASCERAM NA ESCOLA </p>
+
+            <!-- T I T U L O -->
+            
+		<!-- P A R A G R A F O -->
+
+		<p class="conteudo">
+	
+Os patos que nasceram na escola não saem de perto da mãe deles. </p>
+		
+		<p class="conteudo">
+Os patinhos brincam no lago e às vezes recebem a visita dos saguis. O lago fica ao lado da quadra de areia. </p>
+		
+		<p class="conteudo">
+Um viveiro novo foi construído. É onde os animais dormem e se alimentam. Lá eles convivem com galinhas, galo e pintinhos. </p>
+
+		<p class="conteudo">
+Os patos que nasceram são fofinhos e bonitinhos. As crianças podem visitá-los quando os professores deixam. </p>
+		
+		<!-- P A R A G R A F O -->
+
+        </div>
+
+    </div>
+
+
+
+		
