--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Alguns alunos estão usando as mãos ou o copo para beberem água. Outros prefer
 
 		<p class="conteudo">
 	
-Os patos que nasceram na escola não saem de perto da mãe deles. </p>
+Os patos nasceram na escola e não saem de perto da mãe deles. </p>
 		
 		<p class="conteudo">
 Os patinhos brincam no lago e às vezes recebem a visita dos saguis. O lago fica ao lado da quadra de areia. </p>
