--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ Em entrevista, os alunos da recuperação paralela realizaram perguntas e tirara
 
 <p class="conteudo">
 Alunos: Explique o que é uma chapa de grêmio <br>
-Grêmio: É tipo uma segunda diretoria que ajuda nos problemas dos alunos. É uma liderança mais próxima dos alunos.
+Grêmio: É uma liderança mais próxima dos alunos, que ajuda a resolver os problemas da escola.
 </p>
 
 <p class="conteudo">
