--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Um viveiro novo foi construído. É onde os animais dormem e se alimentam. Lá e
 Os patos que nasceram são fofinhos e bonitinhos. As crianças podem visitá-los quando os professores deixam. </p>
 		
 		<!-- P A R A G R A F O -->
-<img src="img/escola.jpg">
+<img src="img/grafico.jpg">
         </div>
 
     </div>
