--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@ Grêmio: Nós vamos tentar trazer o conforto e a diversão que eles [alunos] mer
 Alunos:A chapa se elege por quanto tempo? <br>
 Grêmio: Por dois anos
 </p>
-<img src="img/grafico.jpg">
-            <!-- P A R A G R A F O -->
+<img src="img/grafico.png">
+
+		<!-- P A R A G R A F O -->
 
         </div>
 
