--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@ Os patos que nasceram são fofinhos e bonitinhos. As crianças podem visitá-los
         </div>
 
     </div>
-
+  <!-- P O S T -->
+ <div class="card">
+	 <a href="https://criadordecruzadinhas.com.br/wordsearch/64639ac35eb48a005ad90d40"> CAÇA-PALAVRAS DAS FRUTAS </a>
 
 
 		
