--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Os patos que nasceram são fofinhos e bonitinhos. As crianças podem visitá-los
   <!-- P O S T -->
 	     <!-- I M A G E M -->
 
-        <img src="img/cacaa.png">
+        <img src="img/entretenimento1.png">
 
         <!-- I M A G E M -->
  <div class="card">
