--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Os patos que nasceram são fofinhos e bonitinhos. As crianças podem visitá-los
 	
 ENTRETENIMENTO </p>
 	 <a href="https://criadordecruzadinhas.com.br/wordsearch/64639ac35eb48a005ad90d40"> 
-Os alunos da Recuperação Paralela esconderam os nomes de algumas frutas nesse caça-palavras. Será que você consegue encontrar todas? Clique aqui e resolva esse jogo  </a>
+Clique aqui para fazer o caça-palavras  </a>
 
 <!-- P A R A G R A F O -->
  <!-- I M A G E M -->
