--- a/index.html
+++ b/index.html
@@ -210,4 +210,34 @@ Clique aqui para fazer o caça-palavras  </a>
         </div>
 
     </div>
-		
+ <!-- P O S T -->
+  <!-- T E X T O -->
+
+        <div class="texto">
+
+            <!-- T I T U L O -->
+
+            <p class="titulo"> DICA DE LIVRO: "FÁBULAS DE ESOPO" </p>
+
+            <!-- T I T U L O -->	
+
+    <div class="card">
+
+        <!-- I M A G E M -->
+
+        <img src="img/fabulas.jpg">
+
+        <!-- I M A G E M -->
+<p class="conteudo">
+	Ruth Rocha é a autora do livro que conta as fábulas do Esopo. </p>
+<p class="conteudo">	
+O livro é de fábulas sobre animais, como raposa, galinha, cachorro, galo e outros. Os animais são falantes e têm características: a raposa é mentirosa, o galo é esperto e a formiga é trabalhadora.</p>
+<p class="conteudo">
+	O livro têm ilustrações. É divertido para as crianças e os adultos.</p>
+	    </div>
+
+    </div>
+	
+	    
+
+      
