--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Grêmio: É uma liderança mais próxima dos alunos, que ajuda a resolver os pro
 
 <p class="conteudo">
 
-Alunos: Vocês vão melhorar as escolas? <br>
+Alunos: Vocês vão melhorar a escola? <br>
 Grêmio: Sim, vamos fazer o melhor pela escola. A gente vai fazer o possível pelo desempenho deles [alunos].
 </p>
 
