--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ O livro é de fábulas sobre animais, como raposa, galinha, cachorro, galo e out
 <p class="conteudo">
 	O livro tem ilustrações e a história é curta. Foi escrito por Oliver Jeffers, um escritor da Irlanda do Norte.  </p>
 <p class="conteudo">	
-O livro fala sobre um menino que queria pegar uma estrela. Ele fazia de tudo para tentar pegar ela. O garoto observava as estrelas pela janela do quarto e na rua, imaginando como pegar. O menino queria muito ser amigo da estrela.</p>
+O livro fala sobre um menino que queria pegar uma estrela. Ele fazia de tudo para tentar pegar ela. O garoto observava o céu estrelado pela janela do quarto e na rua, imaginando como pegar. O menino queria muito ser amigo da estrela.</p>
 	    </div>
 
     </div>
