--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Os patos que nasceram são fofinhos e bonitinhos. As crianças podem visitá-los
             <p class="titulo"> ENTRETENIMENTO </p>
 
 	 <a href="https://criadordecruzadinhas.com.br/wordsearch/64639ac35eb48a005ad90d40"> 
-Clique aqui para fazer o caça-palavras  </a>
+Clique aqui para fazer o caça-palavras das frutas </a>
 
 <!-- P A R A G R A F O -->
  <!-- I M A G E M -->
@@ -215,6 +215,35 @@ Clique aqui para fazer o caça-palavras  </a>
         </div>
 
     </div>
+	
+	 <!-- P O S T -->
+	    
+ <div class="card">
+	  <!-- T I T U L O -->
+            
+		<!-- P A R A G R A F O -->
+
+		  <!-- T E X T O -->
+
+        <div class="texto">
+
+            <!-- T I T U L O -->
+
+            <p class="titulo"> ENTRETENIMENTO </p>
+
+	 <a href="https://criadordecruzadinhas.com.br/crossword/64652c9a75317c005a6592a8"> 
+Clique aqui para fazer a cruzadinha de cores  </a>
+
+<!-- P A R A G R A F O -->
+ <!-- I M A G E M -->
+
+        <img src="img/cruzadinha.png">
+
+        <!-- I M A G E M -->
+        </div>
+
+    </div>
+	
  <!-- P O S T -->
   <!-- T E X T O -->
     <div class="card">
