--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ O livro fala sobre um menino que queria pegar uma estrela. Ele fazia de tudo par
     </div>
 	
 	     <!-- P O S T -->
-
+ <div class="card">
 	<!-- T I T U L O -->
 
             <p class="titulo"> A ESCOLA NO OLHAR DOS ALUNOS </p>
