--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
         <!-- I M A G E M -->
 	
       <!-- P A R A G R A F O -->
-	<p class="conteudo"> Lago dos patos e viveiro das aves </p>
+	<p class="conteudo"> Lago dos patos e viveiro das aves </p><br>
 	<!-- P A R A G R A F O -->
     
 	 <!-- I M A G E M -->
@@ -324,7 +324,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
         <!-- I M A G E M -->
 
       <!-- P A R A G R A F O -->
-	<p class="conteudo"> Quadra de areia para jogar vôlei. </p>
+	<p class="conteudo"> Quadra de areia para jogar vôlei. </p><br>
 	<!-- P A R A G R A F O -->
 	
 	 <!-- I M A G E M -->
@@ -334,7 +334,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
         <!-- I M A G E M -->
 
 	 <!-- P A R A G R A F O -->
-	<p class="conteudo"> Laboratório de ciências. </p>
+	<p class="conteudo"> Laboratório de ciências. </p><br>
 	<!-- P A R A G R A F O -->
 	
 	 <!-- I M A G E M -->
@@ -344,7 +344,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
         <!-- I M A G E M -->
 
 	 <!-- P A R A G R A F O -->
-	<p class="conteudo"> Materiais do laboratório de ciências. </p>
+	<p class="conteudo"> Materiais do laboratório de ciências. </p><br>
 	<!-- P A R A G R A F O -->
 	  </div>
 
