--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	
 	 <!-- I M A G E M -->
 
-        <img src="img/viveiro.jpg">
+        <img src="img/patoss.jpg">
 
         <!-- I M A G E M -->
 	
@@ -319,7 +319,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
     
 	 <!-- I M A G E M -->
 
-        <img src="img/areia.jpg">
+        <img src="img/quadraa.jpg">
 
         <!-- I M A G E M -->
 
@@ -329,7 +329,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	
 	 <!-- I M A G E M -->
 
-        <img src="img/lab.jpg">
+        <img src="img/laboratorioo.jpg">
 
         <!-- I M A G E M -->
 
@@ -339,12 +339,82 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	
 	 <!-- I M A G E M -->
 
-        <img src="img/lab1.jpg">
+        <img src="img/materiaiss.jpg">
 
         <!-- I M A G E M -->
 
 	 <!-- P A R A G R A F O -->
 	<p class="conteudo"> Materiais do laboratório de ciências. </p>
+	<!-- P A R A G R A F O -->
+	 
+	  <!-- I M A G E M -->
+
+        <img src="img/entradaa.jpg">
+
+        <!-- I M A G E M -->
+
+	 <!-- P A R A G R A F O -->
+	<p class="conteudo"> Entrada principal da escola Virgílio Salata. </p>
+	<!-- P A R A G R A F O -->
+	 
+	 <!-- I M A G E M -->
+
+        <img src="img/arvoress.jpg">
+
+        <!-- I M A G E M -->
+
+	 <!-- P A R A G R A F O -->
+	<p class="conteudo"> Plantação de árvores do projeto Verdejamento na escola Virgílio Salata. </p>
+	<!-- P A R A G R A F O -->
+	 
+	 <!-- I M A G E M -->
+
+        <img src="img/pracaa.jpg">
+
+        <!-- I M A G E M -->
+
+	 <!-- P A R A G R A F O -->
+	<p class="conteudo"> Parte descoberta do pátio da escola Virgílio Salata. </p>
+	<!-- P A R A G R A F O -->
+	 
+	  <!-- I M A G E M -->
+
+        <img src="img/patioo.jpg">
+
+        <!-- I M A G E M -->
+
+	 <!-- P A R A G R A F O -->
+	<p class="conteudo"> Pátio coberto da escola Virgílio Salata. </p>
+	<!-- P A R A G R A F O -->
+	 
+	 <!-- I M A G E M -->
+
+        <img src="img/equipee.jpg">
+
+        <!-- I M A G E M -->
+
+	 <!-- P A R A G R A F O -->
+	<p class="conteudo"> Equipe gestora e alunos do reforço da manhã. </p>
+	<!-- P A R A G R A F O -->
+	 
+	  <!-- I M A G E M -->
+
+        <img src="img/parquinhoo.jpg">
+
+        <!-- I M A G E M -->
+
+	 <!-- P A R A G R A F O -->
+	<p class="conteudo"> Parquinho das crianças do 1° ao 3° ano. </p>
+	<!-- P A R A G R A F O -->
+	 
+	  <!-- I M A G E M -->
+
+        <img src="img/arvoree.jpg">
+
+        <!-- I M A G E M -->
+
+	 <!-- P A R A G R A F O -->
+	<p class="conteudo"> Ipê-de-jardim na entrada principal da escola. </p>
 	<!-- P A R A G R A F O -->
 	  </div>
 
