--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	
 	 <!-- I M A G E M -->
 
-        <img src="img/patoss.jpg">
+        <img src="img/viveiro.jpg">
 
         <!-- I M A G E M -->
 	
@@ -319,7 +319,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
     
 	 <!-- I M A G E M -->
 
-        <img src="img/quadraa.jpg">
+        <img src="img/quadra.jpg">
 
         <!-- I M A G E M -->
 
@@ -329,7 +329,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	
 	 <!-- I M A G E M -->
 
-        <img src="img/laboratorioo.jpg">
+        <img src="img/laboratorio.jpg">
 
         <!-- I M A G E M -->
 
@@ -339,7 +339,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	
 	 <!-- I M A G E M -->
 
-        <img src="img/materiaiss.jpg">
+        <img src="img/materiais.jpg">
 
         <!-- I M A G E M -->
 
@@ -349,7 +349,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	 
 	  <!-- I M A G E M -->
 
-        <img src="img/entradaa.jpg">
+        <img src="img/entrada.jpg">
 
         <!-- I M A G E M -->
 
@@ -359,7 +359,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	 
 	 <!-- I M A G E M -->
 
-        <img src="img/arvoress.jpg">
+        <img src="img/verdejamento.jpg">
 
         <!-- I M A G E M -->
 
@@ -369,7 +369,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	 
 	 <!-- I M A G E M -->
 
-        <img src="img/pracaa.jpg">
+        <img src="img/praca.jpg">
 
         <!-- I M A G E M -->
 
@@ -379,7 +379,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	 
 	  <!-- I M A G E M -->
 
-        <img src="img/patioo.jpg">
+        <img src="img/patio.jpg">
 
         <!-- I M A G E M -->
 
@@ -389,7 +389,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	 
 	 <!-- I M A G E M -->
 
-        <img src="img/equipee.jpg">
+        <img src="img/equipe.jpg">
 
         <!-- I M A G E M -->
 
@@ -399,7 +399,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	 
 	  <!-- I M A G E M -->
 
-        <img src="img/parquinhoo.jpg">
+        <img src="img/parquinho.jpg">
 
         <!-- I M A G E M -->
 
@@ -409,7 +409,7 @@ As imagens a seguir foram registradas pelos alunos das turmas de recuperação p
 	 
 	  <!-- I M A G E M -->
 
-        <img src="img/arvoree.jpg">
+        <img src="img/arvore.jpg">
 
         <!-- I M A G E M -->
 
