--- a/index.html
+++ b/index.html
@@ -34,7 +34,43 @@
 
 
     <main>
+   <!-- P O S T -->
 
+    <div class="card">
+
+        <!-- I M A G E M -->
+
+        <img src="img/lorax.jpg">
+
+        <!-- I M A G E M -->
+
+
+
+        <!-- T E X T O -->
+
+        <div class="texto">
+
+            <!-- T I T U L O -->
+
+            <p class="titulo"> DICA DE FILME: O LORAX: EM BUSCA DA TRÚFULA PERDIDA </p>
+
+            <!-- T I T U L O -->
+            
+		<!-- P A R A G R A F O -->
+
+		<p class="conteudo">
+	
+O filme conta a história do Ted. Ele queria dar de presente uma muda de Trúfula para a menina que ele gostava. </p>
+		<p class="conteudo">
+Quando sai para procurar a árvore, o menino descobre que o mundo está destruído. Ele conhece um homem chamado Once-Ler, que conta a história do fim das Trúfulas.</p>
+		<p class="conteudo">
+Once dá uma semente especial para Ted e então acontecem várias coisas diferentes. </p>
+
+		<!-- P A R A G R A F O -->
+
+        </div>
+
+    </div>
    <!-- P O S T -->
 
     <div class="card">
