--- a/index.html
+++ b/index.html
@@ -38,29 +38,28 @@
 
     <div class="card">
 
+	     <!-- T I T U L O -->
+
+            <p class="titulo"> DICA DE FILME: O LORAX: EM BUSCA DA TRÚFULA PERDIDA </p>
+
+            <!-- T I T U L O -->
+	    
         <!-- I M A G E M -->
 
         <img src="img/lorax.jpg">
 
         <!-- I M A G E M -->
 
-
-
         <!-- T E X T O -->
 
         <div class="texto">
 
-            <!-- T I T U L O -->
-
-            <p class="titulo"> DICA DE FILME: O LORAX: EM BUSCA DA TRÚFULA PERDIDA </p>
-
-            <!-- T I T U L O -->
             
 		<!-- P A R A G R A F O -->
 
 		<p class="conteudo">
 	
-O filme conta a história do Ted. Ele queria dar de presente uma muda de Trúfula para a menina que ele gostava. </p>
+O filme conta a história do Ted. Ele queria dar de presente uma muda de Trúfula para a menina que gostava. </p>
 		<p class="conteudo">
 Quando sai para procurar a árvore, o menino descobre que o mundo está destruído. Ele conhece um homem chamado Once-Ler, que conta a história do fim das Trúfulas.</p>
 		<p class="conteudo">
