--- a/index.html
+++ b/index.html
@@ -34,7 +34,43 @@
 
 
     <main>
-   <!-- P O S T -->
+    <!-- P O S T -->
+ <div class="card">
+
+        <!-- I M A G E M -->
+
+        <img src="img/papiro.jpg">
+
+        <!-- I M A G E M -->
+
+
+
+        <!-- T E X T O -->
+
+        <div class="texto">
+
+            <!-- T I T U L O -->
+
+            <p class="titulo"> QUAL É A DIFERENÇA ENTRE O PAPIRO E O PERGAMINHO? </p>
+
+            <!-- T I T U L O -->
+            
+		<!-- P A R A G R A F O -->
+
+		<p class="conteudo">
+	
+O papiro foi inventado há mais de cinco mil anos atrás. Ele é feito de planta. Foi criado no egito e era produzido nos pântanos com plantas frescas. As lâminas tinham até 15 metros e eram enroladas para guardar.</p>
+		<p class="conteudo">
+O pergaminho foi inventado no século II AC e foi utilizado até o século XIV DC. Foi criado na cidade de Pérgamo. Ele é feito de couro de ovelha. </p>
+		
+		<!-- P A R A G R A F O -->
+
+        </div>
+
+    </div>
+
+	    
+	    <!-- P O S T -->
 
     <div class="card">
 
