--- a/index.html
+++ b/index.html
@@ -31,7 +31,24 @@
 
 
     <!-- M A I N -->
+ <div class="card">
+	
+        <div class="texto">
 
+            <!-- T I T U L O -->
+
+            <p class="titulo"> ENTRETENIMENTO </p>
+
+	 <a href="https://https://wordwall.net/pt/resource/60689260"> 
+Você conhece os meios de comunicação? Ligue a palavra ao desenho correspondente  </a>
+
+<!-- P A R A G R A F O -->
+ <!-- I M A G E M -->
+
+        <img src="img/joguinho.png">
+
+        <!-- I M A G E M -->
+        </div>
 
     <main>
     <!-- P O S T -->
