--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Você conhece os meios de comunicação? Ligue a palavra ao desenho corresponden
 <!-- P A R A G R A F O -->
  <!-- I M A G E M -->
 
-        <img src="img/joguinho.png">
+        <img src="img/jj.jpeg">
 
         <!-- I M A G E M -->
         </div>
