--- a/index.html
+++ b/index.html
@@ -28,6 +28,32 @@
     <header>
         <h1>JORNAL DAS CRIANÇAS</h1>
     </header>
+    <!-- M A I N -->
+ <div class="card">
+	
+        <div class="texto">
+
+            <!-- T I T U L O -->
+
+            <p class="titulo"> CRIANÇAS VISITAM O COMITÊ OLÍMPICO </p>
+
+	 <a href="https://https://wordwall.net/pt/resource/60689260"> 
+Você conhece os meios de comunicação? Ligue a palavra ao desenho correspondente  </a>
+
+<!-- P A R A G R A F O -->
+<p class="conteudo">
+	No dia 13 de setembro no período da tarde, os alunos do 4° ano C e as crianças da recuperação paralela (4º e 5º ano) foram passear no Taiwan. Lá, estava o Centro de Convivência do Comitê Olímpico.  </p>	
+	<p class="conteudo">
+		Os estudantes e professores foram de ônibus. Eles chegaram e ganharam bonés de presente depois de realizarem alguns desafios. As crianças brincaram de piscina de bolinha, pula-pula, escalada,
+		pebolim e basquete gigante. Eles também ganharam lanche ao final. </p>	
+ <!-- I M A G E M -->
+
+        <img src="img/passeio1.png">
+	 <img src="img/passeio2.png">
+	<img src="img/passeio3.png">
+
+        <!-- I M A G E M -->
+        </div>
 
 
     <!-- M A I N -->
