--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 		pebolim e basquete gigante. Eles também ganharam lanche ao final. </p>	
  <!-- I M A G E M -->
 
-        <img src="img/passeio1.jpg">
-	 <img src="img/passeio2.jpg">
-	<img src="img/passeio3.jpg">
+        <img src="img/passeio1.png">
+	 <img src="img/passeio2.png">
+	<img src="img/passeio3.png">
 
         <!-- I M A G E M -->
         </div>
