--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 		pebolim e basquete gigante. Eles também ganharam lanche ao final. </p>	
  <!-- I M A G E M -->
 
-        <img src="img/passeio1.PNG">
+        <img src="img/comi1.jpg">
 		
-	 <img src="img/passeio2.PNG">
+	 <img src="img/comi2.jpg">
 		
-	<img src="img/passeio3.PNG">
+	<img src="img/comi3.jpg">
 
         <!-- I M A G E M -->
         </div>
